LAB2/lab02_pkg/log/build_2024-10-24_19-36-53/lab02_pkg/stderr.log
  File "/home/rosario/Desktop/Sensors/LAB2/lab02_pkg/install/lab02_pkg/lib/python3.10/site-packages/lab02_pkg/controller.py", line 40
    if(self.distance > 1)
                         ^
SyntaxError: expected ':'

